[project]
name = "rl-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[classic-control,other]>=1.2.1",
    "ipykernel>=7.0.0",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[[tool.uv.index]] 
url = "https://pypi.tuna.tsinghua.edu.cn/simple" 
default = true

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
]
